# my-team-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  mobile.yml  security.yml  worker.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  catalog.py  fixtures.py  health.py  me.py  standings.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
backend/app/db/: models.py  seed.py  session.py
backend/app/schemas/: auth.py  common.py  fixtures.py  standings.py  teams.py
backend/app/services/: api_football.py  cache.py  factory.py  mock_provider.py  provider.py  sync.py
backend/app/tests/: conftest.py  test_auth.py  test_catalog.py  test_health.py  test_provider.py
mobile/: .env.example  .gitignore  README.md  app.json  babel.config.js  eslint.config.js  package-lock.json  package.json  tsconfig.json
mobile/__tests__/: utils.test.ts
mobile/app/: _layout.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  search.tsx
mobile/app/fixture/: [id].tsx
mobile/app/team/: [id].tsx
mobile/assets/: README.md
mobile/store/: authStore.ts
worker/: Dockerfile  README.md  pyproject.toml  ruff.toml
worker/app/: config.py  main.py  tasks.py
worker/app/tests/: test_worker_config.py
