[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myteams-worker"
version = "0.1.0"
description = "MyTeams background worker"
requires-python = ">=3.12"
dependencies = [
    # Share core deps with backend – kept in sync manually.
    "fastapi==0.111.0",         # not for serving; reuse schemas/settings
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis==5.0.4",
    "rq==1.16.2",
    "httpx==0.27.0",
    "structlog==24.1.0",
    "orjson==3.10.3",
    "greenlet==3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "aiosqlite==0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
